# hs-yet-another-logger

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  constraints  constraints-ghc-8.0.1  stack.yaml  yet-another-logger.cabal
.github/workflows/: cabal.yaml  stack-ci.yaml
example/: Example.hs
src/System/: Logger.hs
src/System/Logger/: ColorOption.hs  Internal.hs  Logger.hs  Types.hs  Utils.hs
src/System/Logger/Backend/: ColorOption.hs  Handle.hs
src/System/Logger/Internal/: Queue.hs
src/System/Logger/Internal/Queue/: StripedTBQueue.hs
src/System/Logger/Logger/: Internal.hs
test/: Main.hs  NoBackend.hs  TastyTools.hs
