Name: yet-another-logger
Version: 0.0.1
Synopsis: Yet Another Logger
Description:
    A logging framework that was written with flexibility and performance
    in mind.
    .
    /THIS VERSION IS YET A PREVIEW/
    .
    The framework consists of four main parts that each are abstracted
    via function signatures and thus replaceable.
    .
    1. The logging frontend are those types and functions that are used
       to produce log messages in the code. This includes the 'LogLevel'
       type, the 'LogFunction', the abstract 'LoggerCtx', and the 'MonadLog'
       type class along with a monad transformer instance.

    2. The logger queue is a channel into which the 'LogFunction' delivers
       log messages. The log processor is a background worker that consumes
       log messages from the queue and delivers them to the backend.

    3. The formatter is a function that takes log message and serializes
       it to the format that is expected by a backend.

    4. The logger backend is a callback that is invoked by the log processor.
       The logger backend applies a log message formatting function and
       delivers the log messages to some sink.
    .
    This package provides the following implemenation of these four components:
    .
    Writing a log message in a service application should introduce only
    minimal latency overhead in the thread where the log message is writting.
    As much processing as possible should be done asynchronously.
    This framework addresses this by doing all serializaton in a configurable
    backend worker. A log message can be any Haskell type with an 'NFData'
    constraint. Ideally the logged value is computed anyways in the program so
    that constructing and forcing it does not introduce any additional overhead.
    Log messages have a time-stamp that is produced when the message is writting.
    This introduced overhead and there may be room for optimizations here.
    A log message also has a loglevel. If the log-threshold that is effective
    at the time a log message is written isn't met, no message is produced.
    .
    The log messages are delivered the log queue. Further benchmarking should
    be done in chosen the queue implementation that is best suited for this
    purpose.
    .
    The logging system runs a background worker that reads log messages from
    the queue and calls a backend callback for each message. Right now the
    code includes only a single backend, namely for writing to a handle, but
    we are going to add more backend soon. It will be possible to deliver a
    message to more than a single backend.
    .
    A backend is parameterized with a formatting function. This is where, beside
    IO, most processing happens. The formatting function serializes log
    messages according to the needs of the respective backend.
    .
    Delaying the serialization to the very end of the processing pipeline has
    two advantages:
    .
    1. serialization is done asynchronously,
    2. it is done only for messages that are acutally delivered and is done
       only for those parts of the message that are relevant for the
       respective backend, and
    3. serializaton is flexible.
    .
    For instance when logging to the console one usually wants a line-wise UNIX
    tool friendly format; for a cloud services one may chose an efficient
    binary serialization of messages that is writting to a remote data-base;
    or there may be circumstances where the data of some messages is just
    aggregated for statistical analysis. All this is easily configurable in
    a single place in the code.

Homepage: https://github.com/alephcloud/hs-yet-another-logger
License: Apache-2.0
Author: Lars Kuhtz <lkuhtz@pivotmail.com>
Maintainer: Lars Kuhtz <lkuhtz@pivotmail.com>
Copyright: Copyright (c) 2014-2015 PivotCloud, Inc.
Category: tools
Build-type: Simple
Cabal-version: >= 1.18
License-file: LICENSE

extra-doc-files:
    README.md,
    CHANGELOG.md

extra-source-files:
    constraints

source-repository head
    type: git
    location: https://github.com/alephcloud/hs-yet-another-logger

source-repository this
    type: git
    location: https://github.com/alephcloud/hs-yet-another-logger
    branch: master

Library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        System.Logger
        System.Logger.ColorOption
        System.Logger.Utils

    build-depends:
        async >= 2.0,
        aeson >= 0.7,
        ansi-terminal >= 0.6,
        base == 4.*,
        base-unicode-symbols >= 0.2,
        bytestring >= 0.10,
        case-insensitive >= 1.2,
        configuration-tools >= 0.2.8,
        -- containers >= 0.5,
        -- data-default >= 0.5,
        deepseq >= 1.3,
        -- dlist >= 0.7,
        either >= 4.3,
        enclosed-exceptions >= 1.0,
        -- errors >= 1.4.7,
        -- hoist-error >= 0.1,
        -- http-client >= 0.4,
        lens >= 4.6,
        -- lifted-async >= 0.2,
        lifted-base >= 0.2.3,
        monad-control >= 1.0,
        mtl >= 2.2,
        optparse-applicative >= 0.11,
        -- statistics >= 0.12,
        stm >= 2.4,
        text >= 1.2,
        -- thyme >= 0.3,
        trace >= 0.1,
        transformers >= 0.3

    ghc-options: -Wall

